# VCAE

./: .gitignore  CVAE_testing.ipynb  NAS.ipynb  README.md  VCAE_testing.ipynb  VCAE_training.ipynb  VCAE_training_3D.ipynb  VCAE_training_3D_50_50_250.ipynb  VCAE_training_3D_flex_input.ipynb  VCAE_training_3D_modified_stride 2.ipynb  hyperparam_tune.py  hyperparam_tune_v2.py  importDM4.ipynb  peaks_analysis.ipynb  pyproject.toml  test_CVAE.ipynb
2D VCAE/: importDM4.ipynb
data/: EELS Spectrum Image (high-loss).dm4  raw_testing_set_20111206DF_64.npy  raw_training_set_20111206DF_64.npy
data/models/: 20111206DF_Size64_SIGMA2_epochs200_latentdim20.pth
