[tool.poetry]
name = "ml-local"
version = "0.1.0"
description = ""
authors = ["seyfal <seyfal.sutanov123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
keras = "^3.3.3"
keras-preprocessing = "^1.1.2"
keras-vis = "^0.4.1"
matplotlib = "^3.9.0"
matplotlib-venn = "^0.11.10"
numpy = "^1.26.4"
opencv-contrib-python = "^4.9.0.80"
opencv-python = "^4.9.0.80"
opencv-python-headless = "^4.9.0.80"
scikit-image = "^0.23.2"
scikit-learn = "^1.5.0"
scipy = "^1.13.0"
tensorflow = "^2.16.1"
ipykernel = "^6.29.4"
hyperspy = "^2.1.0"
atomap = "^0.4.0"
torch = "^2.3.0"
torchvision = "^0.18.0"
plotly = "^5.22.0"
nbformat = "^5.10.4"
mpldatacursor = "^0.7.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
